--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								</article>
 
 								<article class="item thumb span-3">
-									<h2>Body Polishing</h2>
+									<h2>Body Polishing Services</h2>
 									<a href="images/fulls/body polishing.jpeg" class="image"><img src="images/fulls/body polishing.jpeg" alt=""></a>
 								</article>
 
@@ -61,7 +61,7 @@
 								</article>
 
 								<article class="item thumb span-2">
-									<h2>Pretty Nails</h2>
+									<h2>Pretty Nails Services</h2>
 									<a href="images/fulls/nails.jpg" class="image"><img src="images/fulls/nails.jpg" alt=""></a>
 								</article>
 
@@ -95,9 +95,9 @@
 						<!-- Items -->
 							<div class="items">
 
-								<article class="item thumb span-3"><h2>Body Massage</h2><a href="images/fulls/massage (1).jpeg" class="image"><img src="images/fulls/massage (1).jpeg" alt=""></a></article>
+								<article class="item thumb span-3"><h2>Book For Your Body Massage</h2><a href="images/fulls/massage (1).jpeg" class="image"><img src="images/fulls/massage (1).jpeg" alt=""></a></article>
 								<article class="item thumb span-1"><h2>Piercing</h2><a href="images/fulls/piercing.jpeg" class="image"><img src="images/fulls/piercing.jpeg" alt=""></a></article>
-								<article class="item thumb span-1"><h2>Pedicure</h2><a href="images/fulls/pedicure.jpeg" class="image"><img src="images/fulls/pedicure.jpeg" alt=""></a></article>
+								<article class="item thumb span-1"><h2>Pedicure Services</h2><a href="images/fulls/pedicure.jpeg" class="image"><img src="images/fulls/pedicure.jpeg" alt=""></a></article>
 								<article class="item thumb span-1"><h2>Weddings</h2><a href="images/fulls/weddings.png" class="image"><img src="images/fulls/weddings.png" alt=""></a></article>
 								<article class="item thumb span-1"><h2>Semi Permanent Makeup</h2><a href="images/fulls/semi permanent makeup.jpg" class="image"><img src="images/fulls/semi permanent makeup.jpg" alt=""></a></article>
 								<article class="item thumb span-2"><h2>Facials</h2><a href="images/fulls/facials.jpg" class="image"><img src="images/fulls/facials.jpg" alt=""></a></article>
@@ -143,4 +143,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
