--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								</article>
 
 								<article class="item thumb span-1">
-									<h2>Manicure</h2>
+									<h2>We Offer Manicure Services</h2>
 									<a href="images/fulls/manicure.jpg" class="image"><img src="images/fulls/manicure.jpg" alt=""></a>
 								</article>
 
@@ -51,7 +51,7 @@
 								</article>
 
 								<article class="item thumb span-3">
-									<h2>Body Polishing Services</h2>
+									<h2>We Offer Body Polishing Services</h2>
 									<a href="images/fulls/body polishing.jpeg" class="image"><img src="images/fulls/body polishing.jpeg" alt=""></a>
 								</article>
 
@@ -145,3 +145,4 @@
 	</body>
 
 </html>
+
