--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 						<section>
 							<ul class="icons">
 								<li><a href="https://wa.me/2348133071479" class="icon brands fa-whatsapp"><span class="label">whatsapp</span></a></li>
+								<li><a href="https://x.com/Adesiyanoluwat5?t=EVvJ_KCaNfEhy6ShawjO2w&s=09" class="icon brands fa-x"><span class="label">x</span></a></li>
 								<li><a href="https://www.instagram.com/mtpro_beauty_home?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.facebook.com/profile.php?id=100063438925595" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="http://www.tiktok.com/@mtpro_beauty_home1" class="icon brands fa-tiktok"><span class="label">Dribbble</span></a></li>
@@ -145,5 +146,6 @@
 	</body>
 
 </html>
+
 
 
