--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
 									<a href="images/fulls/sweet2.jpg" class="image"><img src="images/fulls/sweet2.jpg" alt=""></a>
 									
 								</article>
+								<article class="item thumb span-2">
+									<h2>Great Madeup</h2>
+									<a href="images/fulls/sweet2.jpg" class="image"><img src="images/fulls/sweet2.jpg" alt=""></a>
+									
+								</article>
 
 							</div>
 
@@ -146,6 +151,7 @@
 	</body>
 
 </html>
+
 
 
 
