--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								</article>
 								<article class="item thumb span-2">
 									<h2>Great Madeup</h2>
-									<a href="images/fulls/sweet2.jpg" class="image"><img src="images/fulls/sweet2.jpg" alt=""></a>
+									<a href="images/twitter beauty.jpeg" class="image"><img src="images/twitter beauty.jpeg" alt=""></a>
 									
 								</article>
 
@@ -112,6 +112,7 @@
 								<article class="item thumb span-2"><h2>Elegant</h2><a href="images/fulls/bbb.jpg" class="image"><img src="images/fulls/bbb.jpg" alt=""></a></article>
 								<article class="item thumb span-2"><h2>Sorprendente</h2><a href="images/fulls/amazing.jpg" class="image"><img src="images/fulls/amazing.jpg" alt=""></a></article>
 								<article class="item thumb span-2"><h2>Her Excellency</h2><a href="images/fulls/class.jpg" class="image"><img src="images/fulls/class.jpg" alt=""></a></article>
+								<article class="item thumb span-2"><h2>Gorgeous Lady</h2><a href="images/1756830738931.jpg" class="image"><img src="images/1756830738931.jpg" alt=""></a></article>
 
 							</div>
 
@@ -151,6 +152,7 @@
 	</body>
 
 </html>
+
 
 
 
