--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   gtag('config', 'G-J2C7FQWCJ1');
 </script>
+		</head> 
 		<title>Mtpro Beauty Home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -161,6 +162,7 @@
 	</body>
 
 </html>
+
 
 
 
