--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
 							<a href="http://html5up.net/license"><Address><strong>📍 </strong> October Place Complex, Maxi Pharmacy Opposite Jemo Petrol Station</Address> Old Ife Road Ibadan Oyo State Nigeria</a> </p>
 						</section>
 						
+						<a href="https://wa.me/2348133071479?text=Hello%20Mtpro%20Beauty%20Home%2C%20I%20want%20to%20book%20an%20appointment."
+   target="_blank"
+   style="background-color:#25D366; color:white; padding:12px 20px; border-radius:8px; text-decoration:none; font-weight:bold; font-family:sans-serif;">
+   💬 Book Now on WhatsApp
+</a>
+
 						<section>
 							<ul class="icons">
 								<li><a href="https://wa.me/2348133071479" class="icon brands fa-whatsapp"><span class="label">whatsapp</span></a></li>
@@ -169,6 +175,7 @@
 	</body>
 
 </html>
+
 
 
 
