--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
 								<div class="item intro span-2">
 									<h1>Mtpro Beauty Home</h1>
-									<p>The ultimate destination for beauty, cosmetics and personal care
+									<p>Welcome to Mtpro Beauty Home, a place where you can relax, glow, and feel beautiful inside and out.
+Whether you are here for a makeover, a massage, or a little self-care time, we will make sure you leave smiling.
 <br />  <span style="font-size:12px;"><strong>Your Beauty Is Our Priority </strong></span>
 									</p>
 								</div>
@@ -224,6 +225,7 @@
 	</body>
 
 </html>
+
 
 
 
