--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ Whether you are here for a makeover, a massage, or a little self-care time, we w
   width: 60px;
   height: 60px;
   bottom: 20px;
-  right: 20px;
+  center: 20px;
   background-color: #25D366;
   color: white;
   border-radius: 50%;
@@ -225,6 +225,7 @@ Whether you are here for a makeover, a massage, or a little self-care time, we w
 	</body>
 
 </html>
+
 
 
 
