--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@ Whether you are here for a makeover, a massage, or a little self-care time, we w
 /* WhatsApp floating button styling */
 .whatsapp-float {
   position: fixed;
-  width: 60px;
-  height: 60px;
+  width: 30px;
+  height: 30px;
   bottom: 20px;
-  center: 20px;
+  right: 20px;
   background-color: #25D366;
   color: white;
   border-radius: 50%;
@@ -225,6 +225,7 @@ Whether you are here for a makeover, a massage, or a little self-care time, we w
 	</body>
 
 </html>
+
 
 
 
